# speedtest

./: Cargo.toml  docker-compose.yml
html/src/: index.html
speedtest/: .dockerignore  Dockerfile
speedtest-rust/: Cargo.toml  Dockerfile
speedtest-rust/src/: main.rs  server.rs
speedtest/src/: server.rs
src/: main.rs  options.rs  server.rs
